--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "dnadesign/silverstripe-elemental-archetypes",
 	"description": "Elemental Archetypes",
 	"type": "silverstripe-module",
-	"keywords": ["silverstripe", "element", "archetypes"],
+	"keywords": ["silverstripe", "element", "elemental", "content blocks", "archetypes"],
 	"license": "BSD-3-Clause",
 	"authors": [{
 		"name": "John Milmine",
@@ -11,8 +11,6 @@
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"require": {
-		"silverstripe/framework": "^4.0",
-		"silverstripe/cms": "^4.0",
 		"dnadesign/silverstripe-elemental": "dev-master"
 	},
 	"extra": {
