--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-	"name": "dnadesign/silverstripe-elemental-archetypes",
+	"name": "dnadesign/silverstripe-elemental-skeletons",
 	"description": "Elemental Archetypes",
 	"type": "silverstripe-module",
-	"keywords": ["silverstripe", "element", "elemental", "content blocks", "archetypes"],
+	"keywords": ["silverstripe", "element", "elemental", "content blocks", "skeletons"],
 	"license": "BSD-3-Clause",
 	"authors": [{
 		"name": "John Milmine",
@@ -14,6 +14,6 @@
 		"dnadesign/silverstripe-elemental": "dev-master"
 	},
 	"extra": {
-		"installer-name": "elemental-archetypes"
+		"installer-name": "elemental-skeletons"
 	}
 }
