--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "dnadesign/silverstripe-elemental-skeletons",
 	"description": "Elemental Archetypes",
-	"type": "silverstripe-module",
+	"type": "silverstripe-vendormodule",
 	"keywords": ["silverstripe", "element", "elemental", "content blocks", "skeletons"],
 	"license": "BSD-3-Clause",
 	"authors": [{
@@ -11,7 +11,7 @@
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"require": {
-		"dnadesign/silverstripe-elemental": "dev-master"
+		"dnadesign/silverstripe-elemental": "2.x-dev"
 	},
 	"extra": {
 		"installer-name": "elemental-skeletons"
