--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
 		"dnadesign/silverstripe-elemental": "2.x-dev"
 	},
 	"extra": {
-		"installer-name": "elemental-skeletons"
+		"branch-alias": {
+			"dev-master": "1.x-dev"
+		}
 	}
 }
