Major update to provide compatibility with latest version of silverstripe-elemental, and includes extension to make the module work out of the box

--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,35 @@
 {
-	"name": "dnadesign/silverstripe-elemental-skeletons",
-	"description": "Elemental Archetypes",
-	"type": "silverstripe-vendormodule",
-	"keywords": ["silverstripe", "element", "elemental", "content blocks", "skeletons"],
-	"license": "BSD-3-Clause",
-	"authors": [{
-		"name": "John Milmine",
-		"email": "john.milmine@dna.co.nz"
-	}],
-	"minimum-stability": "dev",
-	"prefer-stable": true,
-	"require": {
-		"dnadesign/silverstripe-elemental": "2.x-dev"
-	},
-	"extra": {
-		"branch-alias": {
-			"dev-master": "1.x-dev"
-		}
-	}
+    "name": "dnadesign/silverstripe-elemental-skeletons",
+    "description": "Create skeletons of elements that can be automatically added when pages are created.",
+    "type": "silverstripe-vendormodule",
+    "keywords": [
+        "silverstripe",
+        "element",
+        "elemental",
+        "content blocks",
+        "skeletons"
+    ],
+    "license": "BSD-3-Clause",
+    "authors": [
+        {
+            "name": "John Milmine",
+            "email": "john.milmine@dna.co.nz"
+        }
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "require": {
+        "dnadesign/silverstripe-elemental": "^2",
+        "silverstripe/recipe-cms": "^1"
+    },
+    "require-dev": {
+        "silverstripe/recipe-testing": "^1",
+        "phpunit/phpunit": "^5.7",
+        "squizlabs/php_codesniffer": "^3.0"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        }
+    }
 }
